--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body {
   margin: 0;
   height: 100%;
   position: fixed;
-  inset: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   font-family: system-ui, sans-serif;
@@ -24,22 +25,41 @@ body > * {
 }
 
 header {
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
+  align-items: center;
   gap: 0.5em;
+  border: 0 solid transparent;
+  border-left-width: env(safe-area-inset-left);
+  border-right-width: env(safe-area-inset-right);
+}
+
+@media (display-mode: window-controls-overlay) {
+  header {
+    min-height: env(titlebar-area-height);
+    color: white;
+    background: #445985;
+    border-left-width: env(titlebar-area-x);
+    border-top-width: env(titlebar-area-y);
+  }
 }
 
 textarea {
+  margin: 0;
   padding: 8px 1rem;
   flex-grow: 1;
   font-size: 13px;
   font-family: ui-monospace, "Noto Sans Mono", "Cousine", monospace;
   line-height: 1.4;
+  caret-color: currentColor;
   background: #aaaaaa40;
   border: 0 solid transparent;
-  border-radius: 0;
+  border-left-width: env(safe-area-inset-left);
+  border-right-width: env(safe-area-inset-right);
   border-top: 1px solid #80808080;
   border-bottom-width: env(safe-area-inset-bottom);
+  border-radius: 0;
+  outline: none;
   resize: none;
 }
 
