--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ html {
 
 body {
   margin: 0;
-  height: 100%;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -37,11 +36,19 @@ header {
 @media (display-mode: window-controls-overlay) {
   header {
     min-height: env(titlebar-area-height);
-    color: white;
     background: #445985;
     border-left-width: env(titlebar-area-x);
     border-top-width: env(titlebar-area-y);
+    -webkit-app-region: drag;
   }
+
+  header button {
+    -webkit-app-region: no-drag;
+  }
+}
+
+input[type="file"] {
+  display: none;
 }
 
 textarea {
