Front-End Expansion
Working on some additions to the app's configuration options, and these few initial changes just make things a bit more explicit for consistency and style terms. I started working on this update a few days ago, and I got back to my machine tonight to work on it again. I'm adding these separate so I can see what the new features are, by themselves.

Listening to The Future Bites again, now I really like this album :D

12 THINGS I FORGOT has really grown on me, I really like this song!

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ input[type="file"] {
 
 textarea {
   margin: 0;
-  padding: 8px 1rem;
+  padding: 8px;
   flex-grow: 1;
   font-size: 13px;
   font-family: ui-monospace, "Noto Sans Mono", "Cousine", monospace;
