Format Options Dialog
It's not functional yet, but I set up how I want the Format Options screen to look! It makes use of an HTML form and dialog which will both update to show the current file's format metadata, and it will allow you to configure how you'd like it to save as.

I was going to move the HTML I have into a Web Component, but I realized I should commit everything I have here since I like how it looks, and I'm probably gonna mess it up before it's working again XD.

--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,20 @@ textarea[disabled] {
 [disabled]::placeholder {
   opacity: 0.5;
 }
+
+dialog {
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+dialog-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+form {
+  display: flex;
+  gap: 0.75rem;
+  flex-direction: column;
+}
