--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,7 @@ input[type="file"] {
   display: none;
 }
 
-textarea {
-  margin: 0;
+nbt-tree {
   padding: 8px;
   flex-grow: 1;
   font-size: 13px;
@@ -71,11 +70,9 @@ textarea {
   border-top: 1px solid #80808080;
   border-bottom-width: env(safe-area-inset-bottom);
   border-radius: 0;
-  outline: none;
-  resize: none;
 }
 
-textarea[disabled] {
+nbt-tree[disabled] {
   opacity: unset;
 }
 
