--- a/styles.css
+++ b/styles.css
@@ -92,29 +92,7 @@ nbt-branch {
   /* outline: 2px solid lime; */
 }
 
-nbt-branch:is(
-  [data-type="1"],
-  [data-type="2"],
-  [data-type="3"],
-  [data-type="4"],
-  [data-type="5"],
-  [data-type="6"],
-  [data-type="8"]
-) {
-  align-items: center;
-}
-
-nbt-branch:is(
-  [data-type="7"],
-  [data-type="9"],
-  [data-type="10"],
-  [data-type="11"],
-  [data-type="12"]
-) {
-  flex-direction: column;
-}
-
-nbt-branch::before {
+nbt-branch:not(nbt-branch > :scope)::before {
   content: "";
   width: 16px;
   height: 16px;
@@ -123,10 +101,6 @@ nbt-branch::before {
   background-repeat: no-repeat;
   background-size: 64px auto;
   image-rendering: pixelated;
-}
-
-nbt-branch:not(nbt-branch > nbt-branch)::before {
-  display: none;
 }
 
 nbt-branch[data-type="1"]::before {
@@ -175,10 +149,6 @@ nbt-branch[data-type="11"]::before {
 
 nbt-branch[data-type="12"]::before {
   background-position: 0 -48px;
-}
-
-:not(nbt-tree) > nbt-branch > nbt-branch {
-  margin-left: 16px;
 }
 
 ::placeholder {
