--- a/styles.css
+++ b/styles.css
@@ -62,12 +62,35 @@ main {
   display: flex;
 }
 
+textarea {
+  padding: 8px;
+  flex-grow: 1;
+  font-size: 13px;
+  font-family: ui-monospace, "Noto Sans Mono", "Cousine", monospace;
+  line-height: 1.4;
+  caret-color: currentColor;
+  background: #aaaaaa40;
+  border: 0 solid transparent;
+  border-left-width: env(safe-area-inset-left);
+  border-right-width: env(safe-area-inset-right);
+  border-top: 1px solid #80808080;
+  border-bottom-width: env(safe-area-inset-bottom);
+  border-radius: 0;
+  outline: none;
+  resize: none;
+}
+
+textarea[disabled] {
+  opacity: unset;
+}
+
 nbt-tree {
   padding: 8px 12px;
   position: absolute;
   inset: 0;
   height: 100%;
-  display: flex;
+  /* display: flex; */
+  display: none;
   gap: 1em;
   flex-direction: column;
   font-size: 13px;
