--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,7 +139,7 @@ nbt-branch > details > summary::before, nbt-branch > label::before {
   width: 16px;
   height: 16px;
   flex-shrink: 0;
-  background-image: url("./public/nbt.png");
+  background-image: url("/nbt.png");
   background-repeat: no-repeat;
   background-size: 64px auto;
   image-rendering: pixelated;
