Tree View Hot Reload! (Demo)
I don't plan to show them both at the same time, because of performance for rebuilding the whole Tree View each time, but we'll see. Maybe SolidJS is nice at handling that? Not completely sure. Maybe that's where the VDOM may actually help out a bunch, since it would only change parts that it needs to. How can I move the NBTify object-based structure for NBT representation, over to using something more UI-based? Looping over all of the keys and values each time doesn't seem the most reactive. I think it should be more declarative, but I'm not sure how to do that yet. This is at least for demoing how often the tree should be rebuilt, I was probably going to do it when `getShowTreeView()` changes, then rebuild it only when changing view states. It does seem really cool to have a live tree view for real-time SNBT editing too though, so we'll see. Would be great to have! STE can do it with rebuilding your whole site from the editor each time, maybe this isn't *that* performance-heavy. There are still probably some optimizations that can tighten things up here and there though, which likely make all the difference. That's usually how things go, the smallest changes make the biggest improvements.

#4

--- a/src/index.scss
+++ b/src/index.scss
@@ -78,6 +78,7 @@ main {
 
 textarea {
   padding: 8px;
+  height: 50%;
   flex-grow: 1;
   font-size: 13px;
   font-family: ui-monospace, "Noto Sans Mono", "Cousine", monospace;
@@ -102,7 +103,8 @@ textarea[disabled] {
   padding: 8px 12px;
   position: absolute;
   inset: 0;
-  height: 100%;
+  top: 50%;
+  height: 50%;
   display: flex;
   gap: 1em;
   flex-direction: column;
